animation settings page (z-index fix for dropdown button)

--- a/src/assets/sass/settings.scss
+++ b/src/assets/sass/settings.scss
@@ -15,7 +15,7 @@ body {
             display: flex;
             flex-direction: column;
 
-            li:nth-child(2) {animation-delay: 0.15s}
+            li:nth-child(2) {animation-delay: 0.15s; z-index: 2}
             li:nth-child(3) {animation-delay: 0.30s}
             li:nth-child(4) {animation-delay: 0.45s}
             li:nth-child(5) {animation-delay: 0.60s}
